Sutter Health/src/objects/Benefit_Grid_Audit__c.object
<CustomObject>
    <fields>
        <fullName>Actuarial_Minimum_Value__c</fullName>
        <label>Actuarial/Minimum Value</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Allergy_Test_Services__c</fullName>
        <label>Allergy Test Services</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ancillary_EOC_Version__c</fullName>
        <label>Ancillary EOC Version</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ancillary_EOC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ancillary EOC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ancillary_GSA_Version__c</fullName>
        <label>Ancillary GSA Version</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ancillary_GSA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ancillary GSA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ancillary_SOB_Version__c</fullName>
        <label>Ancillary SOB Version</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ancillary_SOB__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ancillary SOB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BCM_Version__c</fullName>
        <description>Used to capture BCM version</description>
        <label>BCM Version</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BCM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BCM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Benefit_Grid__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Benefit Grid</label>
        <referenceTo>SHP_Benefit_Grid__c</referenceTo>
        <relationshipName>Benefit_Grid_Audit</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Benefit_Plan_ID__c</fullName>
        <label>Benefit Plan ID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C01_For_an_entire_Family__c</fullName>
        <inlineHelpText>for Family of two or more Members</inlineHelpText>
        <label>C01-For an entire Family of two or mor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C01_For_any_one_Member_in_a_Family__c</fullName>
        <inlineHelpText>for Family of two or more Members</inlineHelpText>
        <label>C01-For any one Member in a Family</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C01_For_self_only_enrollment__c</fullName>
        <inlineHelpText>for a Family of one Member</inlineHelpText>
        <label>C01-For self-only enrollment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C02_For_an_entire_Family__c</fullName>
        <inlineHelpText>for Family of two or more Members</inlineHelpText>
        <label>C02-For an entire Family of two or more</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C02_For_any_one_Member_in_a_Family__c</fullName>
        <inlineHelpText>for a Family of two or more Members</inlineHelpText>
        <label>C02-For any one Member in a Family</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C02_For_self_only_enrollment__c</fullName>
        <inlineHelpText>for a Family of one Member</inlineHelpText>
        <label>C02-For self-only enrollment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C03_For_an_entire_Family__c</fullName>
        <inlineHelpText>for a Family of two or more</inlineHelpText>
        <label>C03-For an entire Family of two or more</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C03_For_any_one_Member_in_a_family__c</fullName>
        <inlineHelpText>for a Family of two or more</inlineHelpText>
        <label>C03-For any one Member in a Family</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C03_For_self_only_enrollment__c</fullName>
        <inlineHelpText>for a Family of one Member</inlineHelpText>
        <label>C03-For self-only enrollment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C04_Lifetime_Maximum__c</fullName>
        <label>C04-Lifetime Maximum</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C05_Eye_exams_for_refraction__c</fullName>
        <label>C05-Eye exams for refraction</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C05_Hearing_exams__c</fullName>
        <label>C05-Hearing exams</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C05_Physical_maintenance_exams__c</fullName>
        <inlineHelpText>Preventive and routine physical maintenance exams (including routine screening tests)</inlineHelpText>
        <label>C05-Physical maintenance exams</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C05_child_prev_care_exams__c</fullName>
        <label>C05-Well-child preventive care exams</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C05_family_plan_couns_serv__c</fullName>
        <label>C05-Family planning counseling&amp;service</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C05_immun_incl_vaccines__c</fullName>
        <label>C05-Immunizations (including vaccines)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C05_prenatal_care_prec_visits__c</fullName>
        <label>C05-Prenatal care &amp; preconception visits</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C05_prev_xray_screen_tests__c</fullName>
        <inlineHelpText>Preventive X-rays, screenings, and laboratory tests</inlineHelpText>
        <label>C05-Preventive X-rays,screenings &amp; tests</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C06_Acupuncture__c</fullName>
        <label>C06-Acupuncture</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C06_Primarycare_nonspecialist_visit__c</fullName>
        <inlineHelpText>Primary care visit or non-specialist practitioner visit to treat an injury or illness</inlineHelpText>
        <label>C06-Primary care visit or non-speciali</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C06_Specialist_visit__c</fullName>
        <label>C06-Specialist visit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C06_op_habilitation_serv__c</fullName>
        <label>C06-Outpatient habilitation services</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C06_op_rehabilitation_serv__c</fullName>
        <label>C06-Outpatient rehabilitation services</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C07_Diagnostic_therapeutic_X_rays__c</fullName>
        <inlineHelpText>Diagnostic and therapeutic X-rays and imaging</inlineHelpText>
        <label>C07-Diagnostic and therapeutic X-rays</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C07_Laboratory_tests__c</fullName>
        <label>C07-Laboratory tests</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C07_Outpatient_surgery_facility_fee__c</fullName>
        <label>C07-Outpatient surgery (facility fee)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C07_imag_mri_ct_pet_scans__c</fullName>
        <label>C07-Imaging(e.g. MRI, CT, and PET scans)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C07_op_surgery_phy_surgeon__c</fullName>
        <inlineHelpText>physician/surgeon fee for Outpatient surgery</inlineHelpText>
        <label>C07-Outpatientsurgery(physician/surgeon)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C07_op_visit_non_office__c</fullName>
        <label>C07-Outpatient visit (non-office visit)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C08_Facility_fee_e_g_hospital_room__c</fullName>
        <label>C08-Facility fee (e.g. hospital room)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C08_Physician_surgeon_fees__c</fullName>
        <label>C08-Physician/surgeon fees</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C09_Emergency_room_facility_fee__c</fullName>
        <label>C09-Emergency room facility fee</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C09_Emergency_room_physician_fee__c</fullName>
        <label>C09-Emergency room physician fee</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C09_Urgent_care_consultations_exams__c</fullName>
        <inlineHelpText>Urgent care consultations, exams, and treatment</inlineHelpText>
        <label>C09-Urgent care consultations, exams</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C10_Ambulance_Services__c</fullName>
        <label>C10-Ambulance Services</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C11_Mail_Order_Tier_1__c</fullName>
        <inlineHelpText>Most generic medications and low-cost preferred brands</inlineHelpText>
        <label>C11-Mail-Order - Tier 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C11_Mail_Order_Tier_2__c</fullName>
        <inlineHelpText>Preferred brand name and non-preferred generic medications</inlineHelpText>
        <label>C11-Mail - Order- Tier 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C11_Mail_Order_Tier_3__c</fullName>
        <inlineHelpText>Non-preferred brand medications</inlineHelpText>
        <label>C11-Mail - Order- Tier 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C11_Retail_Tier_1__c</fullName>
        <inlineHelpText>Most generic medications and low-cost preferred brands</inlineHelpText>
        <label>C11-Retail - Tier 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C11_Retail_Tier_2__c</fullName>
        <inlineHelpText>Preferred brand name and non-preferred generic medications</inlineHelpText>
        <label>C11-Retail - Tier 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C11_Retail_Tier_3__c</fullName>
        <inlineHelpText>Non-preferred brand medications</inlineHelpText>
        <label>C11-Retail - Tier 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C12_Durable_Medical_Equipment__c</fullName>
        <label>C12-Durable Medical Equipment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C13_Inpatient_facility__c</fullName>
        <inlineHelpText>Mental/Behavioral Health/SUD inpatient facility</inlineHelpText>
        <label>C13-Mental/Behavioral/SUD IP facility</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C13_Other_outpatient_services__c</fullName>
        <inlineHelpText>Mental/Behavioral Health/SUD other outpatient services</inlineHelpText>
        <label>C13-SUD other outpatient services</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C13_Outpatient_office_visits_group__c</fullName>
        <inlineHelpText>Mental/Behavioral Health/SUD outpatient office visits – group (Group outpatient MH/SUD evaluation and treatment services)</inlineHelpText>
        <label>C13-SUD outpatient office visits - group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C13_ip_phys_surgeon_fees__c</fullName>
        <inlineHelpText>Mental/Behavioral Health/SUD inpatient physician/surgeon fees</inlineHelpText>
        <label>C13-SUD inpatient physician/surgeon fees</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C13_op_office_visits_ind__c</fullName>
        <inlineHelpText>Mental/Behavioural Health/SUD outpatient office visits – individual (Individual outpatient MH/SUD evaluation and treatment services)</inlineHelpText>
        <label>C13-SUD OP office visits - individual</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C14_Home_health_care__c</fullName>
        <inlineHelpText>up to 100 visits per plan or calendar year</inlineHelpText>
        <label>C14-Home health care</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C15_Delivery_all_hospital_inpatient__c</fullName>
        <inlineHelpText>Delivery and all hospital inpatient services</inlineHelpText>
        <label>C15-Delivery and all hospital inpatient</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C15_delivery_all_profes_ip__c</fullName>
        <inlineHelpText>Delivery and all professional inpatient services</inlineHelpText>
        <label>C15-Delivery &amp;all professional inpatient</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C16_Devices_supplies__c</fullName>
        <inlineHelpText>External prosthetic devices, orthotic devices, and ostomy and urological supplies</inlineHelpText>
        <label>C16-External devices and supplies</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C16_Hospice_care__c</fullName>
        <label>C16-Hospice care</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C16_Infertility_Services__c</fullName>
        <inlineHelpText>as described in the EOC addendum</inlineHelpText>
        <label>C16-Infertility Services</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C16_Orthotics_and_Special_Footwear__c</fullName>
        <inlineHelpText>as described in the EOC addendum</inlineHelpText>
        <label>C16-Orthotics and Special Footwear</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C16_skilled_nurs_fac_serv__c</fullName>
        <inlineHelpText>up to 100 days per benefit period</inlineHelpText>
        <label>C16-Skilled Nursing Facility services</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C17_Basic_pediatric_dental_services__c</fullName>
        <inlineHelpText>Basic pediatric dental services under age 19, such as restorative procedures and periodontal maintenance</inlineHelpText>
        <label>C17-Basic pediatric dental services</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C17_Diagnostic_pediatric_dental__c</fullName>
        <inlineHelpText>Diagnostic and preventive pediatric dental services under age 19, such as exams, cleanings, X-rays, sealants and fluoride</inlineHelpText>
        <label>C17-Diagnostic and pediatric services</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C17_Major_pediatric_dental_services__c</fullName>
        <inlineHelpText>Major pediatric dental services under age 19, such as crowns and cases, endodontics, other periodontics, prosthodontics and oral surgery</inlineHelpText>
        <label>C17-Major pediatric dental services</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C17_ortho_ped_dental_serv__c</fullName>
        <inlineHelpText>Medically necessary orthodontic paediatric dental services under age 19</inlineHelpText>
        <label>C17-Orthodontic pediatric dental service</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C17_ped_vision_ser_eyeexam__c</fullName>
        <label>C17-Pediatric vision services: eye exam</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C17_ped_vision_ser_eyewear__c</fullName>
        <inlineHelpText>one pair of glasses or contact lenses in lieu of glasses</inlineHelpText>
        <label>C17-Pediatric vision services: eyewear</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EOC_Version__c</fullName>
        <description>Used to capture EOC version</description>
        <label>EOC Version</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EOC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Effective_End__c</fullName>
        <label>Effective End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Effective_Start__c</fullName>
        <label>Effective Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EndNote01__c</fullName>
        <label>01</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EndNote02__c</fullName>
        <label>02</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EndNote03__c</fullName>
        <label>03</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IsCustom__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Custom Plan?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsHDHP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HDHP?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsHMO__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HMO?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsMirrored__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mirrored?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsPartDCreditable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PartDCreditable?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsRider__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rider?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Year_Plan_ID__c</fullName>
        <label>Last Year Plan ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market_Segment__c</fullName>
        <label>Market Segment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Small Group</fullName>
                </value>
                <value>
                    <fullName>Large Group</fullName>
                </value>
                <value>
                    <fullName>Individual</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Plan_Disclaimer_Message__c</fullName>
        <label>Plan Disclaimer Message</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Plan_Name_Alternate__c</fullName>
        <label>Plan Name Alternate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_Name__c</fullName>
        <label>Plan Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_Status_Actively_Market__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ActivelyMarketed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Plan_Status_Reason__c</fullName>
        <label>Plan Status Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_Status__c</fullName>
        <label>Plan Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approved by DMHC - Available for Sale</fullName>
                </value>
                <value>
                    <fullName>Not Approved by DMHC - Not Available for Sale</fullName>
                </value>
                <value>
                    <fullName>Pending Approval by DMHC - Available for Sale</fullName>
                </value>
                <value>
                    <fullName>Pending Approval by DMHC - Not Available for Sale</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Plan_Type__c</fullName>
        <label>Plan Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Medical</fullName>
                </value>
                <value>
                    <fullName>Dental</fullName>
                </value>
                <value>
                    <fullName>Pharmacy</fullName>
                </value>
                <value>
                    <fullName>Vision</fullName>
                </value>
                <value>
                    <fullName>Acupuncture Only</fullName>
                </value>
                <value>
                    <fullName>Chiropractic Only</fullName>
                </value>
                <value>
                    <fullName>Acupuncture and Chiro</fullName>
                </value>
                <value>
                    <fullName>Infertility</fullName>
                </value>
                <value>
                    <fullName>Orthotics and Special Footwear</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Product Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>HMO</fullName>
                </value>
                <value>
                    <fullName>HMO - Plus</fullName>
                </value>
                <value>
                    <fullName>Rider</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rider_Cost_Share__c</fullName>
        <label>Rider-Cost Share</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rider_Visit_Limit__c</fullName>
        <label>Rider-Visit Limit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBC_Version__c</fullName>
        <description>Used to capture SBC version</description>
        <label>SBC Version</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SBC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SHP_Benefit_Plan_Year__c</fullName>
        <label>Benefit Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tech_Date_Time__c</fullName>
        <label>Tech Date Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Version_Number__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Version Number</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Portfolio Audit</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Benefit_Plan_ID__c</columns>
        <columns>SHP_Benefit_Plan_Year__c</columns>
        <columns>Benefit_Grid__c</columns>
        <columns>Version_Number__c</columns>
        <columns>Comments__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>GA-{00000}</displayFormat>
        <label>Plan ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Portfolio Audit</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>